--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -32,7 +32,8 @@
         /* border:1px solid black; */
         justify-content:space-between; 
         margin:2px;
-        background-color: #ffffff;
+        /* background-color: #ffffff; */
+        /* background-color: #242729; */
     }
     
     .gifs{
