--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,7 +62,7 @@ code {
 .items-picture{
 margin:6px;
 
-  width:18.5%;
+  width:15.5%;
   /* border:1px solid rgb(150, 148, 148); */
   transition:all 0.3s ease-in-out;
   cursor:pointer;
@@ -73,6 +73,7 @@ margin:6px;
   width: 80%;
   max-width: 100%;
   height: auto;
+  margin-left: 8px;
 }
 .items-picture-six{
 
