--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -101,16 +101,20 @@
         /* border:2px solid #ffffff; */
         height: 100px;
         padding:4px;
-        background-color: rgb(218, 152, 218);
+        /* background-color: rgb(218, 152, 218); */
+        background-color: #242729;
+       
         color:white;
-        border-radius: 0 0 8px 8px;
+        /* border-radius: 0 0 8px 8px; */
+        border-bottom:1px solid #38393a ;
     }
     .search{
         display:flex;
         flex-direction:row;
         justify-content:space-between;
         flex-wrap:wrap;
-        background-color:rgb(218, 152, 218);
+        background-color: #242729;
+        /* background-color:rgb(218, 152, 218); */
         /* align-items: stretch; */
         /* align-content: center; */
         /* margin:2px; */
@@ -139,16 +143,17 @@
        
         font-size:0.9em;
         text-transform:lowercase;
-        background-color:rgb(218, 152, 218);
+        /* background-color:rgb(218, 152, 218); */
+        background-color: #242729;
       
         padding:3px;
         width:500px;
         height:40px;
-        color:black;
+        color:rgb(218, 152, 218); 
       
         border-radius:5px;
         margin-right:0.2rem;
-        border:1px solid white;
+        border:2px solid #38393a; 
         transition:all 0.5s ease-in-out;
         font-family: 'abel';
         font-size:15.5px;
@@ -169,9 +174,10 @@
         
         width:74px;
         height:39px;
-        background-color:rgb(218, 152, 218);
-        border:1px solid white;
-        color:#f1f1f1;
+        /* background-color:rgb(218, 152, 218); */
+        background-color: #242729;
+        border:2px solid #38393a;
+        color:rgb(218, 152, 218); 
         /* font-size:16px; */
         transition:all 0.3s ease-in-out;
         border-radius:5px;
@@ -202,7 +208,7 @@
     }
     .login a{
         font-size:0.9em;
-        color:black;
+        color:rgb(218, 152, 218);
         text-decoration: none;
         padding:6px;
         font-weight:bold;
@@ -226,7 +232,7 @@
     }
     .main-navigation a{
         text-decoration:none;
-        color: black;
+        color:rgb(218, 152, 218);
         /* border: 1px solid black; */
           padding:12px;
           font-weight:bold;
@@ -241,7 +247,7 @@
     } */
     .main-navigation a:hover{
         background-color: white;
-        color:rgb(218, 152, 218);
+        color:#242729;
     }
 
     
