--- a/client/src/components/Cart/cart.css
+++ b/client/src/components/Cart/cart.css
@@ -11,10 +11,23 @@
     display:flex;
     flex-direction:column;
     background-color: #ffffff;
+    min-height: 85vh;
     height:500px;
     margin:6px;
     border-radius: 6px;
       /* border:1px solid black; */
+
+}
+.cart{
+    /* border:1px solid black; */
+    min-height: 70vh;
+    width:80%;
+    margin-left:auto;
+    margin-right:auto;
+    position: relative;
+    top:45px;
+
+
 
 }
 .cart-header{
@@ -22,6 +35,7 @@
     margin:4px ;
     text-align: center;
     /* border:1px solid black; */
+    
 
 }
 .cart-body{
@@ -34,14 +48,18 @@
 
 }
 
-.cart-body h3{
+.cart-body h2{
     color:#ccc;
     /* border:1px solid black; */
     margin:6px;
+    font-size: 1.3em;
+    font-family:'acme';
+    /* color: rgb(218, 152, 218); */
 }
 .cart-title {
-    color:#ccc;
+    /* color:#ccc; */
     /* border:1px solid black; */
+    color: rgb(218, 152, 218);
     margin:6px;
     border-radius: 4px;
     padding:6px;
@@ -49,7 +67,7 @@
     height:45px;
     margin-right: auto;
     margin-left:auto;
-    box-shadow:0 0 5px rgba(117, 116, 116, 0.6);
+    box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6);
 }
 
 
@@ -73,6 +91,8 @@
     height: 45px;
     border:0;
     background-color: rgb(218, 152, 218);
+    font-size: 1em;
+    font-family:'acme';
     font-weight: bold;
     position: relative;
     /* left:40px; */
