--- a/client/src/components/DoubleCollection/doubleCollection.css
+++ b/client/src/components/DoubleCollection/doubleCollection.css
@@ -19,9 +19,10 @@
 .view-six button{
     background-color:rgb(218, 152, 218);
     border:0;
-    width:170px;  
+    width:100%;  
     height: 40px;
-    margin-bottom: 9px;
+    /* margin-bottom: 9px; */
+    /* margin-left:9px; */
     cursor:pointer;
     font-weight: bold;
     transition:all 0.3s ease-in-out;
