--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -20,8 +20,8 @@
 .login-panel{
     display:flex;
     flex-direction:column;
-    width:50%;
-    height:400px;
+    width:40%;
+    height:450px;
     margin-left:auto;
     margin-right: auto;
     position:relative;
@@ -49,20 +49,23 @@
 
 .login-form-group{
     margin-top:15px;
+    margin-bottom:30px;
 }
 
 .login-form-group input{
-    width:70%;
+    width:65%;
     height:45px;
     /* border-radius: 3px; */
      /* margin-left:auto; */
-    margin-left:94px; 
+    margin-left:85px; 
+    font-size: 1em;
+    font-family: 'acme';
     font-weight: bold;
     /* margin:6px; */
     border-top:0;
     border-left:0;
     border-right:0;
-    border-bottom:1px solid rgb(160, 158, 158);
+    border-bottom:2px solid rgb(160, 158, 158);
     /* transition:all 0.3s ease-in-out; */
 }
 .login-form-group input:focus{
@@ -87,8 +90,10 @@
     border:0;
     background-color: rgb(218, 152, 218);
     position: relative;
-    top:24px;
-    left:94px;
+    top:30px;
+    left:80px;
+    font-size: 1em;
+    font-family:'acme';
     font-weight: bold;
     transition:all 0.3s ease-in-out;
     color:#ffffff;
@@ -105,7 +110,7 @@
 }
 .signup-link{
     position:relative;
-    top:30px;
+    top:60px;
     text-align:center;
     font-size:0.9em;
 
