--- a/client/src/components/SignupPage/signup.css
+++ b/client/src/components/SignupPage/signup.css
@@ -10,19 +10,21 @@
 .signup-form-container{
     margin:4px;
     background-color:#ffffff;
+    /* background-color: #ccc; */
     padding:4px;
     min-height: 130vh;
 }
 .signup-form-panel{
     display:flex;
     flex-direction:column;
-    width:50%;
+    width:40%;
     height:550px;
     margin-left:auto;
     margin-right: auto;
     position:relative;
     top:80px;
     box-shadow:0 0 5px rgba(117, 116, 116, 0.6);
+    background-color: #ffffff;
     
 }
 .signup-form-panel-head{
@@ -48,20 +50,22 @@
 }
 
 .signup-form-group input{
-    width:70%;
+    width:65%;
     height:45px;
     /* border-radius: 3px; */
     /* margin-left:auto;
     margin-right:auto; */
+    font-size: 1em;
     font-weight: bold;
-    margin-left:94px; 
+    margin-left:85px; 
    
   
     border-top:0;
     border-left:0;
     border-right:0;
-    border-bottom:1px solid rgb(160, 158, 158);
+    border-bottom:2px solid rgb(160, 158, 158);
     transition:all 0.3s ease-in-out;
+    font-family:'acme';
 
    
 
@@ -76,15 +80,18 @@
 
 }
 .signup-form-panel button{
-    width:70%;
+    width:65%;
     height: 45px;
     border:0;
     background-color: rgb(218, 152, 218);
     position: relative;
     top:24px;  
-    left:94px; 
+    left:85px; 
     font-weight: bold;
     transition:all 0.5s ease-in-out;
+    font-size: 1em;
+    font-family:'acme';
+    color:#ffffff;
 }
 .signup-form-panel button:hover{
     background-color: #f1f1f1;
