--- a/client/src/components/Collection/collection.css
+++ b/client/src/components/Collection/collection.css
@@ -37,6 +37,13 @@
     margin-left: auto;
 
 }
+.product-title{
+    font-weight: bold;
+}
+.product-price{
+    font-weight: bold;
+
+}
 
 
 @media only screen  and (max-width:414px){
