--- a/client/src/components/ViewItemPage/view.css
+++ b/client/src/components/ViewItemPage/view.css
@@ -77,7 +77,7 @@
     background-color:rgb(218, 152, 218);
     transition:all 0.3s ease-in-out;
     border:none;
-    color:#ffffff;
+    color:#242729;
     font-weight: bold;
    
 }
