--- a/client/src/components/DoubleCollection/doubleCollection.css
+++ b/client/src/components/DoubleCollection/doubleCollection.css
@@ -4,17 +4,54 @@
 
 
 
-.view-six{
-    /* border:1px solid black; */
-   
-    width:100%; 
-    position: relative; 
-    margin-right: auto;
-    margin-left: auto;
-    bottom: 2px;
-    /* background-color:rgb(218, 152, 218); */
 
-}
+
+
+
+
+
+
+.six-sale-items{
+    display:inline-flex;
+    /* flex-direction:row; */  
+    flex-wrap: wrap;
+    /* border:1px solid black; */
+    background-color:#ffffff;
+  }
+.six{
+    /* justify-content: space-between; */
+    min-height:473px;
+      /* border:1px solid black; */
+  }
+
+.items-picture-six{
+
+      margin:6px;
+      width:15.65%;
+      /* border:1px solid rgb(150, 148, 148); */
+      transition:all 0.3s ease-in-out;
+      cursor:pointer;
+      position:relative;
+    
+    }
+    .items-picture-six:hover{
+      /* -webkit-box-shadow:0 0 5px rgba(0,0,0,0.6);
+      -moz-box-shadow:0 0 5px rgba(0,0,0,0.6); */
+      box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6);
+      transform:scale(1.03) ;
+    
+    }
+    .view-six{
+        margin-bottom:2px;
+        /* border:1px solid black; */
+      
+        
+        /* height:45px; */
+       
+
+    }
+
+
 
 .view-six button{
     background-color:rgb(218, 152, 218);
@@ -32,16 +69,30 @@
 }
 .items-six-details{
      /* border:1px solid black; */
-    margin-top: 4px;
+    margin-top: 2px;
+    margin-bottom:2px;
     width:180px;  
     margin-right: auto;
     margin-left: auto;
 
 }
 @media only screen  and (max-width:414px){
+    
+    .items-picture-six{
+        width:30%;
+      }
+      .items-picture-six img{
+        width: 40%;
+        position:relative;
+        left:15px;
+        max-width: 100%;
+        height: auto;
+      }
+  
     .view-six button{     
         width:100%; 
         margin-bottom: -2px; 
     }
 
 }
+
