--- a/client/src/components/SeeAllPage/seeAll.css
+++ b/client/src/components/SeeAllPage/seeAll.css
@@ -11,16 +11,63 @@
 
 
 
-  .see-all-items-picture{
-    border:1px solid black;
-    margin:2px;
+  .all-items-picture{
+    /* border:1px solid black; */
+    margin:6px;
     transition:all 0.3s ease-in-out;
     cursor: pointer;
   }
   
-  .see-all-items-picture:hover{
+  .all-items-picture:hover{
     /* -webkit-box-shadow:0 0 5px rgba(0,0,0,0.6);
     -moz-box-shadow:0 0 5px rgba(0,0,0,0.6); */
-    box-shadow:0 0 5px rgba(117, 116, 116, 0.6);
-
+  box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6);
+  transform:scale(1.03) ;
 }  
+.see-all-items-details{
+  /* border:1px solid black; */
+  margin: 4px;
+  width:180px;  
+  margin-right: auto;
+  margin-left: auto;
+
+}
+.see-all-product-title{
+  font-weight: bold;
+  font-family:'acme';
+}
+.see-all-product-price{
+  font-weight: bold;
+  font-family:'acme';
+
+}
+
+.see-all-view{
+  /* border:1px solid black; */
+  width:100%; 
+  position: relative; 
+  margin-right: auto;
+  margin-left: auto;
+  bottom: 2px;
+  /* display:flex;
+  flex-direction: column; */
+  /* background-color:rgb(218, 152, 218); */
+
+}
+
+.see-all-view button{
+  background-color:rgb(218, 152, 218);
+  border:0;
+  width:100%;  
+  height: 40px;
+  /* bottom: 9px; */
+  cursor:pointer;
+  position:relative;
+  font-size:1em;
+  font-weight: bold;
+  transition:all 0.3s ease-in-out;
+  font-family: 'acme';
+}
+.see-all-view button:hover{
+  background-color: rgb(212, 108, 212);
+}
