--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,10 +44,7 @@ code {
 
 }
 
-.six{
-  /* justify-content: space-between; */
-  height:400px;
-}
+
 
 .sale-items{
   display:flex;
@@ -75,23 +72,7 @@ margin:6px;
   height: auto;
   margin-left: 8px;
 }
-.items-picture-six{
 
-margin:6px;
-  width:15.65%;
-  /* border:1px solid rgb(150, 148, 148); */
-  transition:all 0.3s ease-in-out;
-  cursor:pointer;
-  position:relative;
-
-}
-.items-picture-six:hover{
-  /* -webkit-box-shadow:0 0 5px rgba(0,0,0,0.6);
-  -moz-box-shadow:0 0 5px rgba(0,0,0,0.6); */
-  box-shadow:0px 2px 2px 2px rgba(117, 116, 116, 0.6);
-  transform:scale(1.03) ;
-
-}
 
 .items-picture:hover{
   /* -webkit-box-shadow:0 0 5px rgba(0,0,0,0.6);
@@ -146,6 +127,10 @@ margin:6px;
   font-size:25px;
    cursor:pointer;
   }
+  .product-text-danger{
+    color:blue;
+    text-align:center;
+  }
 
 @media only screen  and (max-width:360px){
   /* styles for the header starts here */
@@ -182,19 +167,6 @@ margin:6px;
       
     }
 
-
-    .items-picture-six{
-      width:30%;
-    }
-    .items-picture-six img{
-      width: 40%;
-      position:relative;
-      left:15px;
-      max-width: 100%;
-      height: auto;
-    }
-
- 
  }
  
  
