--- a/client/src/components/Dashboard/dashboard.css
+++ b/client/src/components/Dashboard/dashboard.css
@@ -46,7 +46,7 @@
     /* position:relative;
     top:-274px; */
     /* flex-grow: 1; */
-    border:1px solid black;
+    /* border:1px solid black; */
   
 
 }
