--- a/client/src/components/PopularCollectionPage/popularCollection.css
+++ b/client/src/components/PopularCollectionPage/popularCollection.css
@@ -5,6 +5,7 @@
 .popular-collections-items{
     display:flex;
     flex-direction:column;
+    justify-content:space-between;
   }
 
   .popular-collections-items-header{
