--- a/client/src/components/WomenCollectionPage/womenCollection.css
+++ b/client/src/components/WomenCollectionPage/womenCollection.css
@@ -5,6 +5,7 @@
 .women-collections-items{
     display:flex;
     flex-direction:column;
+    justify-content:space-between;
   }
 
   .women-collections-items-header{
