--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -42,17 +42,20 @@ footer li{
     display:flex;
     flex-wrap:wrap;
     justify-content: space-around;
-    margin:2px;
+    margin-top:50px;
+    
     /* border-top:2px solid rgb(218, 152, 218); */
    
-    /* border:1px solid black; */
+    /* border:1px solid blue; */
  
 }
-/* .footer-main-item{
-  
-} */
+.footer-main-item{
+    /* margin-bottom:10px;
+   */
+}
 .footer-legal{
-    margin-top:140px;
+   
+    margin-top:120px;
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
@@ -85,16 +88,20 @@ footer li{
     flex-wrap: wrap;
     background-color:#242729;
     border-bottom:1px solid #38393a;
-    margin:0;
+    /* margin:6px; */
+    padding:4px;
     color:white;
     min-height:20vh;
+    /* border:1px solid blue; */
      
   
 
 
 }
 .footer-form{
-    margin-right:4px;
+      /* border:1px solid white; */
+      /* width:400px; */
+    /* margin-right:4px; */
 }
 .footer-form p{
     color: rgb(218, 152, 218);
@@ -102,12 +109,13 @@ footer li{
 
 }
 
-.footer-form input[type="email"] {
-    border: 0;
+.footer-form form input[type="email"] {
+    /* border: 0; */
     padding: 0.625rem;
     margin-top: 0.3125rem;
     /* margin-right:0.422rem; */
     color: rgb(218, 152, 218);
+    border-radius:5px;
    
     width:250px;
     height:40px;
@@ -117,31 +125,35 @@ footer li{
     transition:all 0.5s ease-in-out;
     font-size:0.9em;
     font-weight:bold;
-    font-family:'abel'
+    font-family:'abel';
 }
 
-.footer-form input[type="email"]:focus {
-    background-color:#ccc;
-    color:black;
-    font-family:'abel'
-
-
-}
-.footer-form input[type="submit"] {
-    height:40px;
-    /* background-color: rgb(218, 152, 218); */
+.footer-form form input[type="email"]:focus {
+    /* background-color:#ccc; */
+    /* color:black; */
+    font-family:'abel';
     color: rgb(218, 152, 218);
+    background-color: #242729;
+    border:2px solid rgb(218, 152, 218) ;
+
+
+}
+.footer-form form button {
+    height:40px;
+   
+    color: rgb(218, 152, 218);
+    border-radius:5px;
     cursor: pointer;
     border:0px;
-    padding: 8px;
-    margin-top: 0.3125rem;
+    /* padding: 8px; */
+    /* margin-top: 0.3125rem; */
     transition:all 0.4s ease-in-out;
     font-weight:bold;
-    margin-left:-4px;
+    margin-left:4px;
     background-color: #242729;
     border: 2px solid #38393a;
 }
-.footer-form input[type="submit"]:hover{
+.footer-form form button:hover{
     transform:scale(1.05) ;
     /* border:2px solid rgb(190, 87, 190); */
     border:2px solid rgb(218, 152, 218);
