--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -2,8 +2,23 @@
 
 
 
+.login-err-cont{
+      /* border:1px solid black; */
+      width:40%;
+      margin-left:auto;
+      margin-right: auto;
+      margin-top:8px;
+      /* box-shadow:0 0 5px rgba(117, 116, 116, 0.6); */
+      border-radius: 8px;
+     
+      border:1px solid #ccc;
 
+}
+.err-login{
+    text-align:center;
+    color:red;
 
+}
 
 
 .login-container{
@@ -13,7 +28,7 @@
     margin:4px;
     background-color:#ffffff;
     padding:4px;
-    min-height: 100vh;
+    min-height: 90vh;
       /* border:1px solid black; */
 
 }
@@ -24,8 +39,9 @@
     height:450px;
     margin-left:auto;
     margin-right: auto;
+    margin-top:40px;
+    margin-bottom:40px;
     position:relative;
-    top:80px;
     box-shadow:0 0 5px rgba(117, 116, 116, 0.6);
 
 }
